Enable trustore and keystore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:static/server.p12
+server.ssl.key-store-password=server1234
 
+server.ssl.client-auth=need
+server.ssl.trust-store=classpath:static/server-truststore.p12
+server.ssl.trust-store-password=server1234
+
+server.tomcat.accesslog.enabled=true
+
+logging.level.root=DEBUG
